[IM]: HA分组相关方法测试通过